# devlens

./: .gitmodules  LICENSE  README.md
backend/: .gitignore  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/ai/: base.py
backend/app/middleware/: __init__.py  auth.py  rate_limit.py
backend/app/models/: __init__.py  commit.py  issue.py  job.py  organisation.py  repo.py  score.py  user.py
backend/app/routes/: auth.py  health.py  webhook.py
backend/app/schemas/: __init__.py  auth.py  webhook.py
backend/app/services/: auth_service.py  webhook_service.py
backend/app/worker/: queue.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: af7528ef00c2_create_initial_tables.py  ee8edc35d136_add_indexes.py
backend/tests/integration/: test_indexes.py  test_migrations.py
backend/tests/unit/: test_ai_base.py  test_auth_middleware.py  test_auth_routes.py  test_auth_schemas.py  test_auth_service.py  test_config.py  test_database.py  test_main.py  test_models.py  test_queue.py  test_rate_limit.py  test_webhook_route.py  test_webhook_schemas.py  test_webhook_service.py
docs/: architecture.jsx  architecture.md  phase_1_issues.md  project_phase.md  project_phases.jsx  system-design.jsx  system-design.md
